force-app/main/default/objects/Species__c/fields/V_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>V_Descripcion__c</fullName>
    <label>Descripcion</label>
    <type>TextArea</type>
</CustomField>