force-app/main/default/objects/Species__c/fields/V_Image__c.field-meta.xml
<CustomField>
    <fullName>V_Image__c</fullName>
    <formula>IMAGE(V_imageURL__c, Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>