force-app/main/default/objects/Species__c/fields/V_imageURL__c.field-meta.xml
<CustomField>
    <fullName>V_imageURL__c</fullName>
    <label>ImageURL</label>
    <type>Url</type>
</CustomField>