force-app/main/default/objects/Species__c/fields/V_Location__c.field-meta.xml
<CustomField>
    <fullName>V_Location__c</fullName>
    <label>Location</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indoors</fullName>
                <default>true</default>
                <label>Indoors</label>
            </value>
            <value>
                <fullName>Outdoors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>