force-app/main/default/objects/Species__c/fields/V_Pulverization__c.field-meta.xml
<CustomField>
    <fullName>V_Pulverization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pulverization</label>
    <type>Checkbox</type>
</CustomField>