force-app/main/default/objects/Species__c/fields/V_Temperature__c.field-meta.xml
<CustomField>
    <fullName>V_Temperature__c</fullName>
    <label>Ideal max temperature</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>